tests/parser/invalid/syntax_errors/missing_brace.src
fn open() {
    int x = 1;
    # Missing closing brace